fix-index-route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -268,31 +268,31 @@
     </div>
   </body>
   <script>
-    window.addEventListener('load', () => {
-      // Get user from localstorage
-      const username = window.localStorage.getItem('username');
+    // window.addEventListener('load', () => {
+    //   // Get user from localstorage
+    //   const username = window.localStorage.getItem('username');
 
-      // Check if user already exsited
-      if (!username) {
-        window.location.href = 'login';
-      }
+    //   // Check if user already exsited
+    //   if (!username) {
+    //     window.location.href = 'login';
+    //   }
 
-      // Display greeting message to user
-      const greeting = document.querySelector('#greeting');
-      const loginMessage = `Welcome ${JSON.parse(username)}`;
-      const textNode = document.createTextNode(loginMessage);
-      greeting.appendChild(textNode);
+    //   // Display greeting message to user
+    //   const greeting = document.querySelector('#greeting');
+    //   const loginMessage = `Welcome ${JSON.parse(username)}`;
+    //   const textNode = document.createTextNode(loginMessage);
+    //   greeting.appendChild(textNode);
 
-      // Logout function
-      const logout = () => {
-        window.localStorage.removeItem('username');
-        window.location.href = 'login';
-      };
+    //   // Logout function
+    //   const logout = () => {
+    //     window.localStorage.removeItem('username');
+    //     window.location.href = 'login';
+    //   };
 
-      // Handle logout function
-      document.querySelector('#logoutBtn').addEventListener('click', () => {
-        logout();
-      });
-    });
+    //   // Handle logout function
+    //   document.querySelector('#logoutBtn').addEventListener('click', () => {
+    //     logout();
+    //   });
+    // });
   </script>
 </html>
