--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
         <span class="signup__or-text">or</span>
       </div>
 
-      <form action="/login" method="post" class="signup__form" id="loginForm">
+      <form action="/login" method="POST" class="signup__form" id="loginForm">
         <label for="username" class="signup__label">Username</label>
         <input
           type="text"
